--- a/config/gitlab.yml.example
+++ b/config/gitlab.yml.example
@@ -150,7 +150,7 @@ production: &base
   # CAUTION!
   # Use the default values unless you really know what you are doing
   git:
-    bin_path: /usr/bin/git
+    bin_path: /usr/local/bin/git
     # Max size of a git object (e.g. a commit), in bytes
     # This value can be increased if you have very large commits
     max_size: 5242880 # 5.megabytes
